--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,3 @@
-# library
-#set(LIBRARY_NAME "telnet_protocol_1" CACHE INTERNAL "library name")
-
-#add_library(${LIBRARY_NAME} telnet.cpp)
-
-#target_include_directories(${LIBRARY_NAME}
-    PUBLIC
-        $<INSTALL_INTERFACE:include>
-        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>)
-
-#if(UNIX)
-#    target_compile_options(${LIBRARY_NAME} PRIVATE -Werror)
-#endif()
-#target_compile_features(${LIBRARY_NAME} PRIVATE cxx_std_17)
-
-
 # virtual network terminal server
 
 set(SERVER_NVT "server_nvt" CACHE INTERNAL "server nvt")
@@ -24,6 +8,7 @@ add_executable(${SERVER_NVT} nvtd.cpp)
 if(MSVC)
     target_compile_options(${SERVER_NVT} PUBLIC "/MT$<$<CONFIG:Debug>:d>") #cl : Command line warning D9025 : overriding '/MDd' with '/MTd'
     target_link_libraries(${SERVER_NVT} PUBLIC Ws2_32)
+    target_compile_features(${SERVER_NVT} PRIVATE cxx_std_17)
 endif()
 
 
@@ -37,4 +22,5 @@ add_executable(${CLIENT_NVT} nvtc.cpp)
 if(MSVC)
     target_compile_options(${CLIENT_NVT} PUBLIC "/MT$<$<CONFIG:Debug>:d>")
     target_link_libraries(${CLIENT_NVT} PUBLIC Ws2_32)
+    target_compile_features(${CLIENT_NVT} PRIVATE cxx_std_17)
 endif()
