commit to repository

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,17 @@
+#library commands
+if(MSVC)
+    set(LIBRARY_COMMAND "cmd_windows" CACHE INTERNAL "library with commands avaliable")
+    add_library(${LIBRARY_COMMAND} implcmd)
+    target_include_directories(${LIBRARY_COMMAND} 
+        PUBLIC 
+            $<INSTALL_INTERFACE:include>
+            $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
+        PRIVATE
+            ${CMAKE_SOURCE_DIR}/src
+    )
+    target_compile_options(${LIBRARY_COMMAND} PUBLIC "/MT$<$<CONFIG:Debug>:d>")
+    target_compile_features(${LIBRARY_COMMAND} PUBLIC cxx_std_17)
+endif()
 # virtual network terminal server
 
 set(SERVER_NVT "server_nvt" CACHE INTERNAL "server nvt")
