--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,15 +1,23 @@
 add_subdirectory("${CMAKE_SOURCE_DIR}/extern/catch2" "extern/catch2")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/extern/catch2/contrib")
 
-add_executable(tests_c test.cpp)
+set(TEST_COMMAND "test_commands" CACHE INTERNAL "tests to command")
+add_executable(${TEST_COMMAND} testscmd.cpp)
 
 if(MSVC)
-    target_compile_options(tests_c PUBLIC "/MT$<$<CONFIG:Debug>:d>")
-    target_link_libraries(tests_c Catch2::Catch2)
-    target_compile_features(tests_c PUBLIC cxx_std_17)
+    target_include_directories( ${TEST_COMMAND}
+        PUBLIC
+         ${CMAKE_SOURCE_DIR}/src
+    )
+    target_compile_options(${TEST_COMMAND} PUBLIC "/MT$<$<CONFIG:Debug>:d>")
+    target_link_libraries(${TEST_COMMAND} ${LIBRARY_COMMAND} Catch2::Catch2)
+    target_compile_features(${TEST_COMMAND} PUBLIC cxx_std_17)
 endif()
+
+
+
 
 include(CTest)
 include(Catch)
 
-catch_discover_tests(tests_c)
+catch_discover_tests(${TEST_COMMAND})
