- create util file with common algorithms - move the USER and PASS command to Session class - create a new implementation class implcmd - it was implemented a new command PORT (must be tests more)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 #library commands
 if(MSVC)
     set(LIBRARY_COMMAND "cmd_windows" CACHE INTERNAL "library with commands avaliable")
-    add_library(${LIBRARY_COMMAND} implcmd)
+    add_library(${LIBRARY_COMMAND} implcmd.cpp implftp.cpp session.cpp)
     target_include_directories(${LIBRARY_COMMAND} 
         PUBLIC 
             $<INSTALL_INTERFACE:include>
@@ -11,30 +11,4 @@ if(MSVC)
     )
     target_compile_options(${LIBRARY_COMMAND} PUBLIC "/MT$<$<CONFIG:Debug>:d>")
     target_compile_features(${LIBRARY_COMMAND} PUBLIC cxx_std_17)
-endif()
-# virtual network terminal server
-
-set(SERVER_NVT "server_nvt" CACHE INTERNAL "server nvt")
-
-add_executable(${SERVER_NVT} nvtd.cpp)
-
-# windows features
-if(MSVC)
-    target_compile_options(${SERVER_NVT} PUBLIC "/MT$<$<CONFIG:Debug>:d>") #cl : Command line warning D9025 : overriding '/MDd' with '/MTd'
-    target_link_libraries(${SERVER_NVT} PUBLIC Ws2_32)
-    target_compile_features(${SERVER_NVT} PRIVATE cxx_std_17)
-endif()
-
-
-# virtual network terminal client
-
-set(CLIENT_NVT "client_nvt" CACHE INTERNAL "client nvt")
-
-add_executable(${CLIENT_NVT} nvtc.cpp)
-
-# windows features
-if(MSVC)
-    target_compile_options(${CLIENT_NVT} PUBLIC "/MT$<$<CONFIG:Debug>:d>")
-    target_link_libraries(${CLIENT_NVT} PUBLIC Ws2_32)
-    target_compile_features(${CLIENT_NVT} PRIVATE cxx_std_17)
 endif()
