update cmake and remove old files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,22 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.12)
 
 project(telnet VERSION 1.0.0 LANGUAGES CXX)
 
+option(PACKAGE_TESTS "build the tests" ON)
+option(SAMPLES "build the samples" ON)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/extern/catch2/contrib")
+
+add_subdirectory(extern)
 
 add_subdirectory(src)
 
-option(PACKAGE_TESTS "build the tests" ON)
 if(PACKAGE_TESTS)
     enable_testing()
     add_subdirectory(tests)
 endif()
 
+if(SAMPLES)
+    add_subdirectory(samples)
+endif()
 
