--- a/samples/CMakelists.txt
+++ b/samples/CMakelists.txt
@@ -1,26 +1,19 @@
-# virtual network terminal server
+# virtual network terminal server test
+cmake_minimum_required(VERSION 3.12)
+project(samples VERSION 1.0.0  DESCRIPTION "Samples to prove some concepts" LANGUAGES CXX)
+if(MSVC)
+    add_executable(server_nvt) 
+    target_sources(server_nvt PRIVATE nvtd.cpp)
+    target_compile_options(server_nvt PRIVATE "/MT$<$<CONFIG:Debug>:d>") #cl : Command line warning D9025 : overriding '/MDd' with '/MTd'
+    target_link_libraries(server_nvt PRIVATE Ws2_32)
+    target_compile_features(server_nvt PRIVATE cxx_std_17)
 
-set(SERVER_NVT "server_nvt" CACHE INTERNAL "server nvt")
-
-add_executable(${SERVER_NVT} nvtd.cpp)
+# virtual network terminal client tet
+    add_executable(client_nvt)
 
 # windows features
-if(MSVC)
-    target_compile_options(${SERVER_NVT} PUBLIC "/MT$<$<CONFIG:Debug>:d>") #cl : Command line warning D9025 : overriding '/MDd' with '/MTd'
-    target_link_libraries(${SERVER_NVT} PUBLIC Ws2_32)
-    target_compile_features(${SERVER_NVT} PRIVATE cxx_std_17)
-endif()
-
-
-# virtual network terminal client
-
-set(CLIENT_NVT "client_nvt" CACHE INTERNAL "client nvt")
-
-add_executable(${CLIENT_NVT} nvtc.cpp)
-
-# windows features
-if(MSVC)
-    target_compile_options(${CLIENT_NVT} PUBLIC "/MT$<$<CONFIG:Debug>:d>")
-    target_link_libraries(${CLIENT_NVT} PUBLIC Ws2_32)
-    target_compile_features(${CLIENT_NVT} PRIVATE cxx_std_17)
+    target_sources(client_nvt PRIVATE nvtc.cpp)
+    target_compile_options(client_nvt PRIVATE "/MT$<$<CONFIG:Debug>:d>")
+    target_link_libraries(client_nvt PRIVATE Ws2_32)
+    target_compile_features(client_nvt PRIVATE cxx_std_17)
 endif()
