--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(UnitTest)
-target_sources(UnitTest PRIVATE tests_main.cpp tests_ImplFTP.cpp tests_machine.cpp machine_test.cpp)
+target_sources(UnitTest PRIVATE tests_main.cpp machine_test.cpp)
 target_link_libraries(UnitTest PRIVATE FTP::Basic Catch2::Catch2)
 
 include(CTest)
